added more styles

--- a/SelahSeries/Views/Home/About.cshtml
+++ b/SelahSeries/Views/Home/About.cshtml
@@ -6,7 +6,6 @@
 
     <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/main_styles.css">
     <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/responsive.css">
-    <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/slider.css">
 
 }
 
@@ -16,18 +15,123 @@
 }
 
 
-    <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url(/NewFolder2/images2/hero_bg_1.jpg)" data-aos="fade" data-stellar-background-ratio="0.5" data-aos="fade">
+    <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url('/NewFolder2/new/kelly-sikkema-5g8exOobDjg-unsplash.jpg')" data-aos="fade" data-stellar-background-ratio="0.5" data-aos="fade">
         <div class="container">
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-7 text-center" data-aos="fade-up" data-aos-delay="400">
-                    <h1 class="text-white" style="font-family: 'Work Sans', sans-serif; text-transform:initial">About Us</h1>
-                    <p style="font-family: 'Work Sans', sans-serif">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <h2 class="support_head">About Us</h2>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="container">
+        <div class="featured-property-half d-flex first_top">
+            <div class="image" style="background-image: url('/NewFolder2/new/brigitte-tohm-XyGeWTj2E7w-unsplash.jpg')"></div>
+            <div class="text">
+                <h3 style="color:darkred; text-align: center; margin-bottom:20px">Selah <b>Series</b></h3>
+                <p class="mb-5" style="color:black; text-align:center; line-height:1.70">SELAH Series is one of the components of the GRAY HAIR MINISTRIES that seeks to reach out to people across various age groups with our main focus on relationships and marriages. We carry a burden that is backed up by God’s calling to ensure that everyone we come across enjoys a fulfilling and godly life.</p>
+                @*<ul class="property-list-details mb-5">
+                    <li class="text-black">Property Name: <strong class="text-black">Marga Luxury Suite</strong></li>
+                    <li>Room: <strong>2</strong></li>
+                    <li>Total Area: <strong>482 Square Feets</strong></li>
+                    <li>Category: <strong>Modern House</strong></li>
+                    <li>Lunch Date: Jan 20, 2019<strong></strong></li>
+                </ul>*@
+                <p class="mb-5" style="color:black; text-align:center; line-height:1.70">We see ourselves as “privileged clay in the hands of the Potter” and, thus, our sole aim is for God’s name to be glorified in the lives of everyone we shall come across. We welcome you in the name of our Lord Jesus Christ. It is our prayer and desire that you will find your time on this website as useful and rewarding.</p>
+            </div>
+        </div>
+    </div>    
+
+    <div class="container">
     <div class="site-section">
-        <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                <img src="/NewFolder2/images2/img_1.jpg" alt="Image" class="img-fluid">
+            </div>
+            <div class="col-lg-8">
+                <h2 class="carousel_head">Olalekan Isaiah Agunbiade</h2>
+                <div id="myCarousel" class="carousel slide">
+                    <!-- Carousel indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                    </ol>
+                    <!-- Wrapper for carousel items -->
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="carousel-caption d-none d-md-block">
+
+                                <p style="text-align:justify; color: black; line-height: 1.7">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I am Olalekan Isaiah AGUNBIADE a Nigerian citizen from the ancient city of Ilesha. I was born in Alaba-Oro area of Lagos as the last born of a monogamous friendly family. However, I grew up in Odo-Iro area of Ilesha. Odo-Iro used to be a scary downtown in those days, featuring all sorts of social vices and perhaps the toughest place to raise a child. I bless God for His unflinching grace, my disciplinarian parents and siblings, and some church people. I had my early education at The Apostolic Church Primary School, Oke – Iro and Methodist High School, Cappa; both in Ilesha.</p>
+                                <p style="text-align:justify; color: black; line-height: 1.7">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I qualified as a Registered Nurse (RN) from the School of Nursing, Wesley Guild Hospital Ilesha in 2006; completed my Bachelor’s degree in Nursing in 2014 from the historical Obafemi Awolowo University, Ile-Ife and had my Public Health Nursing program at the College of Hygiene, Eleyele, Ibadan in 2015. By divine privilege, I was the first African alumnus of the Edmond J. Safra Clinical Faculty Program (2014); a  </p>
+</div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="carousel-caption d-none d-md-block">
+                                <p style="text-align:justify; color: black; line-height: 1.7">member of World Stroke Organisation, European Stroke Organisation, and Movement Disorder Society, just to mention a few. My professional practice includes serving as one of the nurses to Late (Dr.) Lawrence Omole, a volunteer experience with Living Hope Foundation, and staff nurse position at Obafemi Awolowo University Teaching Hospitals Complex, Ile-Ife and currently practicing in a Regional Hospital in Europe. I have been involved in some research publications in public health and movement disorders.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>First slide label</h5>
+                                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Carousel controls -->
+                    <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>
+                </div>
+                @*<div id="miCarousel">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="carousel-caption">
+                        <p>Surprisingly, Titi called me on a January evening in 2012 to ask if I wanted her to still consider my earlier proposal but my answer was not tough to conclude on; No, thanks. </p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="carousel-caption">
+                        <p>TEXXXXT</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="carousel-caption">
+                        <p>TEXT</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="carousel-caption">
+                        <p>TEXT</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="carousel-caption">
+                        <p>TEXT</p>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        </div>*@
+            </div>
+        </div>
+    </div>
+    </div>
+    @*<div class="site-section">
+       
             <div class="row">
                 <div class="col-lg-4">
                     <img src="/NewFolder2/images2/img_1.jpg" alt="Image" class="img-fluid">
@@ -49,10 +153,9 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
+    </div>*@
 
-    <div class="site-section">
+    @*<div class="site-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
@@ -73,6 +176,58 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
 
 
+<style>
+    .centered {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    .carousel {
+        margin-top: 50px;
+    }
+
+    .carousel {
+        background: white;
+        margin-top: 20px;
+    }
+
+   
+    .carousel-inner {
+        height: 430px;
+    }
+
+    .carousel-caption {
+        color: #fff;
+        top: 50%;
+    }
+
+    .carousel_head{
+        color: black;
+        text-align: center;
+    }
+
+    .carousel-control-next:hover {
+        color: #ad001c;
+    }
+
+    .carousel-control-next-icon, .carousel-control-prev-icon {
+        display: inline-block;
+        width: 20px;
+        height: 20px;
+        background-color: #ad001c;
+        background-size: 100% 100%;
+    }
+    .carousel-indicators li {
+        background-color: rgba(173, 0, 28,.7);
+    }
+    .carousel-indicators .active {
+        background-color: #ad001c;
+    }
+    .img-fluid{
+        margin-top: 100px;
+    }
+</style>
