--- a/SelahSeries/Views/Home/Index.cshtml
+++ b/SelahSeries/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 @section AddToHead {
     <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/main_styles.css">
     <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/responsive.css">
-
+    <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/more_styles.css">
 }
 
 @section AddToEnd {
@@ -70,7 +70,7 @@
 
                 <img src="/NewFolder2/new/brigitte-tohm-XyGeWTj2E7w-unsplash.jpg" alt="Avatar">
                 <div class="container2">
-                    <h4>For latest news on politics</h4>
+                    <h4>Interested in articles on Relationship and Marriage?</h4>
                     <p>@Html.ActionLink("See here >>>", "Category", "Blog")</p>
                 </div>
             </div>
@@ -82,7 +82,7 @@
 
                 <img src="/NewFolder2/new/jacalyn-beales-geRpPjIiu8U-unsplash.jpg" alt="Avatar ">
                 <div class="container2">
-                    <h4>Sport</h4>
+                    <h4>Do you want to read about having a fulfilling career?</h4>
                     <p>@Html.ActionLink("See here >>>", "Category", "Blog")</p>
                 </div>
             </div>
@@ -93,7 +93,7 @@
             <div class="card2">
                 <img src="/NewFolder2/new/kakudmi-JO19K0HDDXI-unsplash (1).jpg" alt="Avatar">
                 <div class="container2">
-                    <h4>Relationship advice</h4>
+                    <h4>Need latest news on sports?</h4>
                     <p>@Html.ActionLink("See here >>>", "Category", "Blog")</p>
                 </div>
             </div>
@@ -104,7 +104,7 @@
             <div class="card2">
                 <img src="/NewFolder2/new/lucia-48UaeIMNAA4-unsplash (2).jpg" alt="Avatar" ">
                 <div class="container2">
-                    <h4>To Reach Us</h4>
+                    <h4>Are you interested in politics?</h4>
                     <p>@Html.ActionLink("See here >>>", "Category", "Blog")</p>
                 </div>
             </div>
@@ -115,7 +115,7 @@
 </div>
 
 <div class="row parallax" style="background-image: url('/NewFolder2/new/element5-digital-MEzqoN8p6C0-unsplash.jpg');" id="blog">
-    <img style="width:100%; height:19.06em" src="/NewFolder2/new/element5-digital-MEzqoN8p6C0-unsplash.jpg" alt="image" />
+    <img style="width:100%; height:16.06em" src="/NewFolder2/new/element5-digital-MEzqoN8p6C0-unsplash.jpg" alt="image" />
     <div class="centered h2" style="font-family: 'Ubuntu', sans-serif; color:white">Blog</div>
 </div>
 
@@ -141,11 +141,10 @@
                             <div class="section_tags ml-auto">
                                 <ul>
                                     <li class="active"><a href="category.html">all</a></li>
-                                    <li>@Html.ActionLink("Married", "Category", "Blog")</li>
-                                    <li>@Html.ActionLink("Singles", "Category", "Blog")</li>
-                                    <li>@Html.ActionLink("Teenagers", "Category", "Blog")</li>
+                                    <li>@Html.ActionLink("Relationship & Marriage", "Category", "Blog")</li>
                                     <li>@Html.ActionLink("Politics", "Category", "Blog")</li>
                                     <li>@Html.ActionLink("Sports", "Category", "Blog")</li>
+                                    <li>@Html.ActionLink("career", "Category", "Blog")</li>
                                 </ul>
                             </div>
                             @*<div class="section_panel_more">
@@ -213,9 +212,9 @@
                                     </div>
                                 </div>
 
-                                
 
-                                
+
+
 
                             </div>
                         </div>
@@ -343,6 +342,102 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 											</svg>
                                     </div>
                                     <ul id="custom_dots" class="custom_dots custom_dots_vid">
@@ -354,6 +449,78 @@
                                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                              width="7px" height="12px" viewBox="0 0 7 12" enable-background="new 0 0 7 12" xml:space="preserve">
                                         <polyline fill="#bebebe" points="6.998,6.39 1.389,12 -0.002,12 -0.002,10.562 4.561,6 -0.002,1.438 -0.002,0 1.389,0 7,5.61 " />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -586,14 +753,18 @@
 
 </div>
 
+
+<!-- Books Advertisement-->
+
+<!--Advert header-->
 <div class="row" id="books">
     <div class="has-overlay">
-        <img style="width:100%; height:19.06em" src="/NewFolder2/new/florencia-viadana-1J8k0qqUfYY-unsplash (2).jpg" alt="image" />
+        <img style="width:100%; height:16.06em" src="/NewFolder2/new/florencia-viadana-1J8k0qqUfYY-unsplash (2).jpg" alt="image" />
     </div>
     <div class="centered h2" style="font-family: 'Ubuntu', sans-serif; color:white">Trending <b>Books</b> By Author</div>
 </div>
 
-<!-- Books Advertisement-->
+<!--Books-->
 <div class="page_content" style="margin-top:35px">
     <div class="container">
         <div class="row">
@@ -794,218 +965,5 @@
         </div>
     </div>
 </div>
-
-
-<style type="text/css">
-    .has-overlay::after {
-        content: "";
-        display: block;
-        position: absolute;
-        padding: 100px 0;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        background-color: rgba(0,0,0,0.5);
-    }
-
-    .carousel {
-        margin: 50px auto;
-        padding: 0 70px;
-    }
-
-        .carousel .item {
-            min-height: 330px;
-            text-align: center;
-            overflow: hidden;
-        }
-
-            .carousel .item .img-box {
-                height: 160px;
-                width: 100%;
-                position: relative;
-            }
-
-            .carousel .item img {
-                max-width: 100%;
-                max-height: 100%;
-                display: inline-block;
-                position: absolute;
-                bottom: 0;
-                margin: 0 auto;
-                left: 0;
-                right: 0;
-            }
-
-            .carousel .item h4 {
-                font-size: 18px;
-                margin: 10px 0;
-            }
-
-            .carousel .item .btn {
-                color: #8b0000;
-                border-radius: 0;
-                font-size: 11px;
-                text-transform: uppercase;
-                font-weight: bold;
-                background: none;
-                border: 1px solid #ccc;
-                padding: 5px 10px;
-                margin-top: 5px;
-                line-height: 16px;
-            }
-
-                .carousel .item .btn:hover, .carousel .item .btn:focus {
-                    color: #fff;
-                    background: #8b0000;
-                    border-color: #8b0000;
-                    box-shadow: none;
-                }
-
-                .carousel .item .btn i {
-                    font-size: 14px;
-                    font-weight: bold;
-                    margin-left: 5px;
-                }
-
-        .carousel .thumb-wrapper {
-            text-align: center;
-        }
-
-        .carousel .thumb-content {
-            padding: 15px;
-        }
-
-        .carousel .carousel-control {
-            height: 100px;
-            width: 40px;
-            background: none;
-            margin: auto 0;
-            background: rgba(0, 0, 0, 0.2);
-        }
-
-            .carousel .carousel-control i {
-                font-size: 30px;
-                position: absolute;
-                top: 50%;
-                display: inline-block;
-                margin: -16px 0 0 0;
-                z-index: 5;
-                left: 0;
-                right: 0;
-                color: rgba(0, 0, 0, 0.8);
-                text-shadow: none;
-                font-weight: bold;
-            }
-
-        .carousel .item-price {
-            font-size: 13px;
-            padding: 2px 0;
-        }
-
-
-
-        .carousel .item-price {
-            color: black;
-            font-size: 110%;
-        }
-
-        .carousel .carousel-control.left i {
-            margin-left: -3px;
-        }
-
-        .carousel .carousel-control.left i {
-            margin-right: -3px;
-        }
-
-        .carousel .carousel-indicators {
-            bottom: -50px;
-        }
-
-    .carousel-indicators li, .carousel-indicators li.active {
-        width: 10px;
-        height: 10px;
-        margin: 4px;
-        border-radius: 50%;
-        border-color: transparent;
-    }
-
-    .carousel-indicators li {
-        background: rgba(0, 0, 0, 0.2);
-    }
-
-        .carousel-indicators li.active {
-            background: rgba(0, 0, 0, 0.6);
-        }
-
-    .star-rating li {
-        padding: 0;
-    }
-
-    .star-rating i {
-        font-size: 14px;
-        color: #ffc000;
-    }
-
-    .carousel-item {
-        position: relative;
-        height: 100vh;
-        min-height: 350px;
-        background: no-repeat center center scroll;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-    }
-
-    .black-overlay {
-        position: absolute;
-        top: 0px;
-        height: 100%;
-        width: 100%;
-        background: rgba(0,0,0,0.6)
-    }
-
-    .centered {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
-
-    .card2 {
-        color: black;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        transition: 0.3s;
-        width: 100%;
-        border-radius: 5px;
-        margin-top: 10px;
-    }
-
-        .card2:hover {
-            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-        }
-
-        .card2 img {
-            width: 100%;
-            height: 14em;
-            border-radius: 5px 5px 0 0;
-            margin: 0;
-        }
-
-    .container2 {
-        padding: 2px 16px;
-    }
-
-    .card2 h4 {
-        padding: 3px;
-        color: black;
-        text-align: center;
-    }
-
-    .card2 p {
-        text-align: center;
-    }
-</style>
 
 
