--- a/SelahSeries/Views/Blog/post.cshtml
+++ b/SelahSeries/Views/Blog/post.cshtml
@@ -5,6 +5,7 @@
 @section AddToHead {
     <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/post.css">
     <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/post_responsive.css">
+    <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/more_styles.css">
 }
 
 @section AddToEnd {
@@ -125,7 +126,7 @@
                         <div class="post_comment">
                             <div class="post_comment_title">Post Comment</div>
                             <div class="row">
-                                <div class="col-xl-8">
+                                <div class="col-xl-9">
                                     <div class="post_comment_form_container">
                                         <form action="#">
                                             <input type="text" class="comment_input comment_input_name" placeholder="Your Name" required="required">
@@ -142,50 +143,108 @@
                         <div class="comments">
                             <div class="comments_title">Comments <span>(12)</span></div>
                             <div class="row">
-                                <div class="col-xl-8">
+                                <div class="col-xl-9">
                                     <div class="comments_container">
+
                                         <ul class="comment_list">
+
+                                            <!-- Reply -->
                                             <li class="comment">
                                                 <div class="comment_body">
                                                     <div class="comment_panel d-flex flex-row align-items-center justify-content-start">
-                                                        <div class="comment_author_image"><div><img src="images/comment_author_1.jpg" alt=""></div></div>
+                                                        <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span></small>
+                                                        <button type="button" onclick="" class="reply_button ml-auto">Reply</button>
+                                                    </div>
+                                                    <div class="comment_content">
+                                                        <p>Pick the yellow peach that looks like a sunset with its red, orange, and pink coat skin, peel it off with your teeth. Sink them into unripened.</p>
+                                                    </div>
+                                                    <div class="reply_info">
+                                                        <small class="comment_replies">5 replies <a href="#" class="view_button"><span>View replies</span></a></small>
+                                                    </div>
+
+                                                    <!--Replies-->
+                                                    <div class="replies_container">
+                                                        <div class="replies_title">Replies <span>(5)</span></div>
+                                                        <ul class="reply_list">
+                                                            <li class="reply">
+                                                                <div class="reply_body">
+                                                                    <div class="reply_panel d-flex flex-row align-items-center justify-content-start">
+                                                                        <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span></small>
+                                                                    </div>
+                                                                    <div class="reply_content">
+                                                                        <p>Pick the yellow peach that looks like a sunset with its red, orange, and pink coat skin, peel it off with your teeth. Sink them into unripened.</p>
+                                                                    </div>
+                                                                </div>
+                                                            </li>
+                                                            <li class="reply">
+                                                                <div class="reply_body">
+                                                                    <div class="reply_panel d-flex flex-row align-items-center justify-content-start">
+                                                                        <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span></small>
+                                                                    </div>
+                                                                    <div class="reply_content">
+                                                                        <p>Pick the yellow peach that looks like a sunset with its red, orange, and pink coat skin, peel it off with your teeth. Sink them into unripened.</p>
+                                                                    </div>
+                                                                </div>
+                                                            </li>
+                                                        </ul>
+                                                    </div>
+
+
+                                                    <!--Comment Reply Form-->
+                                                    <div class="row">
+                                                        <div class="col-xl-10">
+                                                            <div class="comment_reply_form_container" id="comment_reply_form">
+                                                                <form action="#">
+                                                                    <input type="text" class="comment_input comment_input_name" placeholder="Your Name" required="required">
+                                                                    <input type="email" class="comment_input comment_input_email" placeholder="Your Email" required="required">
+                                                                    <textarea class="comment_text" placeholder="Your Reply" required="required"></textarea>
+                                                                    <button type="submit" class="comment_button">Post Reply</button>
+                                                                </form>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+
+
+                                                </div>
+
+
+
+                                            </li>
+
+
+                                            <!-- Reply -->
+
+                                            <li class="comment">
+                                                <div class="comment_body">
+                                                    <div class="comment_panel d-flex flex-row align-items-center justify-content-start">
                                                         <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span></small>
                                                         <button type="button" class="reply_button ml-auto">Reply</button>
                                                     </div>
                                                     <div class="comment_content">
-                                                        <p>Pick the yellow peach that looks like a sunset with its red, orange, and pink coat skin, peel it off with your teeth. Sink them into unripened.</p>
+                                                        <p>Nulla facilisi. Aenean porttitor quis tortor id tempus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus molestie varius tincidunt. Vestibulum congue sed libero ac sodales.</p>
+                                                    </div>
+                                                    <div class="reply_info">
+                                                        <small class="comment_replies">5 replies <a href="#" class="view_button"><span>View replies</span></a></small>
                                                     </div>
                                                 </div>
 
-                                                <!-- Reply -->
-                                                <ul class="comment_list">
-                                                    <li class="comment">
-                                                        <div class="comment_body">
-                                                            <div class="comment_panel d-flex flex-row align-items-center justify-content-start">
-                                                                <div class="comment_author_image"><div><img src="images/comment_author_2.jpg" alt=""></div></div>
-                                                                <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span></small>
-                                                                <button type="button" class="reply_button ml-auto">Reply</button>
-                                                            </div>
-                                                            <div class="comment_content">
-                                                                <p>Nulla facilisi. Aenean porttitor quis tortor id tempus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus molestie varius tincidunt. Vestibulum congue sed libero ac sodales.</p>
-                                                            </div>
-                                                        </div>
 
-                                                        <!-- Reply -->
-                                                        <ul class="comment_list"></ul>
-                                                    </li>
-                                                </ul>
                                             </li>
+
+                                            <!--Reply-->
                                             <li class="comment">
                                                 <div class="comment_body">
                                                     <div class="comment_panel d-flex flex-row align-items-center justify-content-start">
-                                                        <div class="comment_author_image"><div><img src="images/comment_author_1.jpg" alt=""></div></div>
                                                         <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span></small>
                                                         <button type="button" class="reply_button ml-auto">Reply</button>
                                                     </div>
                                                     <div class="comment_content">
                                                         <p>Pick the yellow peach that looks like a sunset with its red, orange, and pink coat skin, peel it off with your teeth. Sink them into unripened.</p>
                                                     </div>
+                                                    <div class="reply_info">
+                                                        <small class="comment_replies">12 replies <a onclick="showReplies()"><span>View replies</span></a></small>
+                                                    </div>
+
                                                 </div>
                                             </li>
                                         </ul>
@@ -224,6 +283,14 @@
 
 
 
+
+
+
+
+
+
+
+
 											</svg>
                                     </div>
                                     <ul id="custom_dots" class="custom_dots custom_dots_top">
@@ -235,6 +302,14 @@
                                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                              width="7px" height="12px" viewBox="0 0 7 12" enable-background="new 0 0 7 12" xml:space="preserve">
                                         <polyline fill="#bebebe" points="6.998,6.39 1.389,12 -0.002,12 -0.002,10.562 4.561,6 -0.002,1.438 -0.002,0 1.389,0 7,5.61 " />
+
+
+
+
+
+
+
+
 
 
 
@@ -452,9 +527,9 @@
                         </div>
                     </div>
 
-                   
 
-                      
+
+
 
                 </div>
             </div>
