--- a/SelahSeries/Views/Home/Contact.cshtml
+++ b/SelahSeries/Views/Home/Contact.cshtml
@@ -12,26 +12,27 @@
     <script src="plugins/parallax-js-master/parallax.min.js"></script>
 }
 
-<div class="home">
-    <div class="home_background parallax-window" data-parallax="scroll" style="background-image:url(/NewFolder2/new/amir-samoh-WgV0g05NQCM-unsplash.jpg)" data-speed="0.8"></div>
-    <div class="home_content">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 offset-lg-3">
-                    <!-- Post Comment -->
-                    <div class="post_comment">
-                        <div class="contact_form_container">
-                            <form action="#">
-                                <input type="text" class="contact_input contact_input_name" placeholder="Your Name" required="required">
-                                <input type="email" class="contact_input contact_input_email" placeholder="Your Email" required="required">
-                                <textarea class="contact_text" placeholder="Your Message" required="required"></textarea>
-                                <button type="submit" class="contact_button">Send Message</button>
-                            </form>
+    <div class="home">
+        <div class="home_background parallax-window site-blocks-cover overlay" data-parallax="scroll" style="background-image:url(/NewFolder2/new/priscilla-du-preez-glDterhfzKw-unsplash.jpg)" data-speed="0.8"></div>
+        
+        <div class="home_content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 offset-lg-3">
+                        <!-- Post Comment -->
+                        <div class="post_comment">
+                            <div class="contact_form_container">
+                                <form action="#">
+                                    <input type="text" class="contact_input contact_input_name" placeholder="Your Name" required="required">
+                                    <input type="email" class="contact_input contact_input_email" placeholder="Your Email" required="required">
+                                    <textarea class="contact_text" placeholder="Your Message" required="required"></textarea>
+                                    <button type="submit" class="contact_button">Send Message</button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
