--- a/SelahSeries/wwwroot/NewFolder2/styles/contact.css
+++ b/SelahSeries/wwwroot/NewFolder2/styles/contact.css
@@ -274,7 +274,7 @@ section
 {
 	font-family: 'Ubuntu', sans-serif;
 	font-size: 20px;
-	color: #FFFFFF;
+	color: #F2ba16;
 	text-transform: uppercase;
 	font-weight: 700;
 	letter-spacing: 0.075em;
@@ -308,11 +308,10 @@ section
 	-o-transition: all 200ms ease;
 	transition: all 200ms ease;
 }
-.main_nav ul li a:hover,
-.main_nav ul li.active a
-{
-	color: rgba(255,255,255,1);
-}
+    .main_nav ul li a:hover,
+    .main_nav ul li.active a {
+        color: rgba(242, 186, 22, 1);
+    }
 
 /*********************************
 3.3 Weather and Search
@@ -438,10 +437,9 @@ section
 	padding-top: 87px;
 	padding-left: 50px;
 }
-.menu .logo a
-{
-	color: #000000;
-}
+    .menu .logo a {
+        color: rgba(242, 186, 22, 1);
+    }
 .menu.active
 {
 	right: 0;
@@ -592,6 +590,7 @@ section
 	left: 0;
 	width: 100%;
 	height: 100%;
+    background-position: center;
 }
 .home_content
 {
@@ -739,8 +738,8 @@ section
     position: relative;
     width: 143px;
     height: 36px;
-    background: #ced4da;
-    color: #8b0000;
+    background: #8b0000;
+    color: #ced4da;
     border: none;
     outline: none;
     border-radius: 18px;
@@ -755,8 +754,9 @@ section
     margin-right: auto;
 }
     .contact_button:hover {
-        background: #8b0000;
-        color: #FFFFFF;
+        background: #ced4da;
+        color: #8b0000;
+        border: 1px solid #8b0000;
     }
 
 /*********************************
@@ -774,15 +774,14 @@ section
 	text-align: center;
 	padding-bottom: 17px;
 }
-.footer_logo a
-{
-	font-family: 'Ubuntu', sans-serif;
-	font-size: 20px;
-	font-weight: 700;
-	color: #FFFFFF;
-	letter-spacing: 0.075em;
-	text-transform: uppercase;
-	line-height: 0.75;
+.footer_logo a {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+    color: rgba(242, 186, 22, 1);
+    letter-spacing: 0.075em;
+    text-transform: uppercase;
+    line-height: 0.75;
 }
 .footer_social
 {
